--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "dependencies": {
     "cuid": "^1.3.8",
+    "load-iframe": "^1.0.0",
     "query-string": "^4.2.3"
   },
   "devDependencies": {
